# SurfaceLab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: model-tests.yml
docs/: DECOMPOSITION.md
resources/: Info.plist.in  SurfaceLabPiPL.r
scripts/: SurfaceLabCreateControllers.jsx  SurfaceLabDiagnoseRig.jsx  SurfaceLabResetSelectedSurface.jsx  build_and_install.sh
src/: SurfaceLab.cpp  SurfaceLab.h  SurfaceLabGeometry.cpp  SurfaceLabGeometry.h  SurfaceLabInternal.h  SurfaceLabModel.cpp  SurfaceLabModel.h  SurfaceLabRender.cpp  SurfaceLabRender.h  SurfaceLabUI.cpp  SurfaceLabUI.h
tests/: model_tests.cpp
